# lastwar

./: Makefile  README.md  pyproject.toml
data/: synz.csv
docs/: MGRally.md  alliance_tech.md  alt.md  mg_rally.md
tests/: compare_alt_detection.py  feat.py  iso_forrest.py  predict.py  top50.py  xgboost_ranking.py
